--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 .env.development
 .env.test
 .env.production
-
+check_env.py
 # --- Python ---
 # Byte-compiled / optimized / DLL files
 __pycache__/
